src/pages/_index.module.scss
.apps {
	display: flex;
	flex-wrap: wrap;
	gap: 16px;

	> div {
		flex: 1 1 240px;
		border-radius: 16px;
		padding: 20px;
		display: flex;
		flex-direction: column;
		transition-duration: .2s;
		position: relative;

		:root[data-corner=sharp] & {
			border-radius: 0;
		}

		:root[data-corner=semi-round] & {
			border-radius: 8px;
		}

		:root[data-corner=full-round] & {
			border-radius: 36px;
		}

		> :global(.c-btn) {
			position: absolute;
			top: 20px;
			right: 20px;
		}
	}

	& img {
		width: 112px;
		margin-bottom: 16px;
	}

	& h3 {
		font-size: var(--g-font-size-xm);
		padding-bottom: 8px;
	}

	& p {
		padding-bottom: 16px;
	}
}

.body {
	width: 1080px;
	max-width: 100%;
	min-height: 100dvh;
	display: flex;
	flex-direction: column;
	align-items: center;
}

.features {
	width: 840px;
	max-width: 100%;

	> h2 {
		font-size: var(--g-font-size-xxl);
		font-weight: 500;
		margin-bottom: 24px;
	}

	> div {
		display: flex;
		align-items: flex-start;
		gap: 16px;

		&:not(:last-child) {
			border-bottom: 1px solid rgba(var(--g-color-on-surface), var(--g-opacity-border));
			padding-bottom: 24px;
		}

		&:not(:last-child) {
			margin-bottom: 24px;
		}

		> :global(.c-icon) {
			--c-icon-size: var(--g-font-size-xxd);
		}
	}

	& h3 {
		font-size: var(--g-font-size-xm);
		margin-bottom: 4px;
		color: rgb(var(--g-color-accent));
	}
}

.header {
	width: 840px;
	max-width: 100%;
	padding: 64px 16px;

	> h1 {
		font-size: var(--g-font-size-xxd);
		font-weight: 100;
		margin-bottom: 32px;

		@media (max-width: 600px) {
			font-size: var(--g-font-size-xxl);
		}

		> span {
			text-decoration: underline;
			font-weight: bold;
			text-decoration-thickness: max(1px, 0.05em);
			text-underline-offset: 0.1em;

			&[data-color=green] {
				color: #026E00;
				:root[data-theme=dark] & { color: #02E600 }
				:root[data-theme=system] & {@media (prefers-color-scheme: dark) { color: #02E600 }}
			}

			&[data-color=blue] {
				color: #343DFF;
				:root[data-theme=dark] & { color: #BEC2FF }
				:root[data-theme=system] & {@media (prefers-color-scheme: dark) { color: #BEC2FF }}
			}

			&[data-color=red] {
				color: #C00100;
				:root[data-theme=dark] & { color: #FFB4A8 }
				:root[data-theme=system] & {@media (prefers-color-scheme: dark) { color: #FFB4A8 }}
			}
		}
	}

	> p {
		font-size: var(--g-font-size-m);
	}
}

.main {
	max-width: 100%;
	padding: 0 16px;
	display: flex;
	flex-direction: column;
	align-items: center;
}


.more_apps {
	margin: 32px 0 64px 0;
	box-shadow: 0px 8px 16px rgba(var(--g-color-accent), 0.16);

	:root[data-theme="dark"] & {
		box-shadow: 0px 8px 16px rgba(var(--g-color-accent), 0.28);
	}
	:root[data-theme="dark"] & {
		@media (prefers-color-scheme: dark) {
			box-shadow: 0px 8px 16px rgba(var(--g-color-accent), 0.28);
		}
	}
}

.quote {
	font-size: var(--g-font-size-l);
	text-align: center;
	margin: 64px 0;

	& span {
		display: inline-block;
		transition-duration: .2s;
		position: relative;

		@media (hover: hover) {
			&:hover {
				color: rgb(var(--g-color-surface));
				padding: 0 .3em;
				background-color: rgb(var(--g-color-on-surface));
				scale: 1.15;
			}
		}
	}
}

